# pytest-reverse

./: .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
requirements/: py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: pytest_reverse.py
src/pytest_reverse/: __init__.py
tests/: test_pytest_reverse.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
