[metadata]
name = pytest-reverse
version = 1.1.0
description = Pytest plugin to reverse test order.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/pytest-reverse
project_urls =
    Changelog = https://github.com/adamchainz/pytest-reverse/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = pytest, reverse
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = pytest_reverse
include_package_data = True
install_requires =
    pytest
python_requires = >=3.6
zip_safe = False

[options.entry_points]
pytest11 =
    randomly = pytest_reverse

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
