[metadata]
name = pytest_reverse
version = 1.6.0
description = Pytest plugin to reverse test order.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/pytest-reverse
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = pytest, reverse
project_urls =
    Changelog = https://github.com/adamchainz/pytest-reverse/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    pytest
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    reverse = pytest_reverse

[flake8]
max-line-length = 88
extend-ignore = E203
